--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="blue">#2B7AE2</color>
+    <color name="dark_blue">#215EAF</color>
+    <color name="yellow">#FCC02E</color>
+    <color name="red">#E24F63</color>
+    <color name="green">#18a01C</color>
+    <color name="dark_gray">#9D9D9D</color>
+    <color name="light_gray">#F3F3F3</color>
 </resources>
