Сделал шаблон стартового экрана

--- a/app/src/main/res/drawable/bg_search.xml
+++ b/app/src/main/res/drawable/bg_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F3F3F4" />
+    <solid android:color="@color/light_gray" />
     <corners android:radius="@dimen/edittext_bg_corner_radius" />
     <padding
             android:bottom="@dimen/padding_0"
