--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,8 +27,12 @@
     <dimen name="text_size_22">22sp</dimen>
     <dimen name="text_size_40">40sp</dimen>
     <dimen name="text_size_56">56sp</dimen>
+    <dimen name="text_size_96">96sp</dimen>
 
     <dimen name="edittext_bg_corner_radius">8dp</dimen>
     <dimen name="edittext_bg_border_with">1dp</dimen>
     <dimen name="edittext_height">56dp</dimen>
+
+    <dimen name="bg_circle_size">164dp</dimen>
+    <dimen name="bg_circle_border_with">1dp</dimen>
 </resources>
