--- a/app/src/main/res/layout/fragment_cities.xml
+++ b/app/src/main/res/layout/fragment_cities.xml
@@ -18,7 +18,9 @@
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolabr"
                 android:layout_width="match_parent"
-                android:layout_height="?android:actionBarSize">
+                android:layout_height="?android:actionBarSize"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
             <LinearLayout
                     android:id="@+id/ll_search"
